# stereo_vision

./: .env  .gitignore  README.md  error.md
.qwen/: settings.json
info/: global_prompt.md
models/House/: model.sdf
models/robot/: model.sdf
models/robot_cameron/: model.config  model.sdf
src/icp_processing/: CMakeLists.txt  package.xml
src/icp_processing/launch/: icp_processing_launch.py
src/icp_processing/src/: icp_processing_node.cpp
src/icp_slam/: CMakeLists.txt  package.xml
src/icp_slam/launch/: icp_slam_launch.py
src/icp_slam/src/: icp_slam_node.cpp
src/icp_slam2/: CMakeLists.txt  package.xml
src/icp_slam2/launch/: icp_slam2_launch.py
src/icp_slam2/src/: icp_slam2_node.cpp
src/images_processing/: CMakeLists.txt  package.xml
src/images_processing/launch/: images_processing_launch.py
src/images_processing/src/: images_processing_node.cpp
src/keyboard_control/: CMakeLists.txt  package.xml
src/keyboard_control/src/: keyboard_control_node.cpp
src/only_icp/: CMakeLists.txt  package.xml
src/only_icp/launch/: only_icp_launch.py
src/only_icp/src/: only_icp_node.cpp
src/pointcloud_filter/: CMakeLists.txt  package.xml
src/robot_state_monitor/: CMakeLists.txt  package.xml
src/robot_state_monitor/launch/: robot_state_monitor_launch.py
src/robot_state_monitor/src/: robot_state_node.cpp
src/test/: package.xml
src/triangulation_cloud/: CMakeLists.txt  package.xml
src/wheel_odometry/: CMakeLists.txt  package.xml
src/world_gen/: CMakeLists.txt  package.xml
worlds/: middle_house  my_world  my_world2  new_house2
(+5 files in other folders)
